--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ jwcrypto==1.5.0
 multidict==6.0.4
 oauthlib==3.2.2
 packaging==23.1
+psycopg2-binary==2.9.6
 pyasn1==0.5.0
 pycparser==2.21
 PyJWT==2.7.0
