--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ aiosignal==1.3.1
 asgiref==3.7.2
 async-timeout==4.0.2
 attrs==23.1.0
-backports.zoneinfo;python_version<"3.9"
+backports.zoneinfo==0.2.1
 certifi==2023.5.7
 cffi==1.15.1
 charset-normalizer==3.1.0
@@ -46,5 +46,6 @@ sqlparse==0.4.4
 typing_extensions==4.6.3
 uritemplate==4.1.1
 urllib3==2.0.3
+whitenoise==6.5.0
 wrapt==1.15.0
 yarl==1.9.2
